2008-02-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* README:
	* NEWS: Release 0.5.6

	* configure.ac: Post release bump to 0.5.7.

	* clutter/clutter-behaviour-scale.c:
	* tests/test-fbo.c: Fix compilation warnings.

2008-02-11  Tomas Frydrych  <tf@openedhand.com>

	* clutter/clutter-actor.c (clutter_actor_transform_stage_point):
	Moved part of the calculation to floating point to avoid overflow
	of ClutterFixed range for large actors (bug 613).

2008-02-10  Matthew Allum    <mallum@o-hand.com>

        * clutter/osx/clutter-stage-osx.c
	Fix up a couple of typos breaking build.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Add actor box diagram and notes.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Move the nice graph and
	description from the Path behaviour...

	* clutter/clutter-behaviour.c: ... to the main Behaviour class.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Add a paragraph describing
	the effects of different alpha functions on the path behaviour.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Reference the newly added event-flow.png

	* clutter/clutter-alpha.c: Ditto, with alpha-func.png

	* clutter/clutter-texture.c: Fix the XML.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-behaviour-path.c: Reference the newly
	added image showing the effects of different alpha functions
	on the same path behaviour.

	* configure.ac: Find out the prefix of some of the libraries
	we depend upon, so that gtk-doc can fix the references for us.

2008-02-08  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-texture.c:
        Tidy up offscreen code, adding into realize/unrealize.
        Add more safety code.
        Improve documentation.

2008-02-08  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script.c: